# cosec-examples

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
anf/: CMakeLists.txt
anf/src/: anf.cpp  anf.hpp  anf_avx2.cpp  anf_avx2.hpp  main.cpp
asio-advanced/: CMakeLists.txt
asio-advanced/src/: main.cpp
asio-basic/: CMakeLists.txt
asio-basic/src/: main.cpp
asio-main/: CMakeLists.txt
asio-main/include/ce/: main.hpp
asio-main/src/: main.cpp
asio-shared/: CMakeLists.txt
asio-shared/src/: chat.cpp  chat.hpp  chat_session.cpp  chat_session.hpp  main.cpp
asio-stackfull-coro/: CMakeLists.txt
asio-stackfull-coro/src/: main.cpp
asio-utils/: CMakeLists.txt
asio-utils/include/ce/: asio-main.hpp  get_socket.hpp  io_context_signal_interrupter.hpp  socket_session.hpp  tcp_listener.hpp
asio-utils/src/: asio-main.cpp  io_context_signal_interrupter.cpp  main.cpp
asm-basic/: CMakeLists.txt
asm-basic/src/: add.S  add.hpp  main.cpp
atomic/: CMakeLists.txt
atomic/src/: main.cpp
block-scene/: CMakeLists.txt
block-scene/src/: block.cpp  block.hpp  blockmetrics.cpp  blockmetrics.hpp  blockpropertiesmodel.cpp  blockpropertiesmodel.hpp  blockscene.cpp  blockscene.hpp  blocktypes.cpp  blocktypes.hpp  blocktypesmodel.cpp  blocktypesmodel.hpp  connection.cpp  connection.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  opaquegraphicsitem.cpp  opaquegraphicsitem.hpp  port.cpp  port.hpp
delegates-sql/: CMakeLists.txt
delegates-sql/src/: colordelegate.cpp  colordelegate.hpp  fabricsmodel.cpp  fabricsmodel.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
et/: CMakeLists.txt
et/src/: common.hpp  et_vector.hpp  main.cpp  naive_vector.hpp  vector_base.hpp
generator/: CMakeLists.txt
generator/src/: generator.hpp  main.cpp
geohash/: CMakeLists.txt
geohash/src/: main.cpp  mainwidget.cpp  mainwidget.hpp  mainwidget.ui
gui-progress/: CMakeLists.txt
gui-progress/src/: copywidget.cpp  copywidget.hpp  copywidget.ui  filecopier.cpp  filecopier.hpp  main.cpp
interprocess-copy/: CMakeLists.txt  main.cpp
interprocess-copy/src/: config.hpp.in  event.hpp  file_descriptor.hpp  fork.hpp  knem.hpp  main.cpp  memfd.hpp  pipe.hpp  utils.hpp
item-models/: CMakeLists.txt
item-models/src/: main.cpp  mymodel.cpp  mymodel.hpp  testwidget.cpp  testwidget.hpp  testwidget.ui
layouts-painting/: CMakeLists.txt
layouts-painting/src/: draw_widget.cpp  draw_widget.hpp  main.cpp  widget.cpp  widget.hpp  widget.ui
locale-resources/: CMakeLists.txt
locale-resources/resources/: resources.qrc
locale-resources/src/: config.hpp.in  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  translations.cpp  translations.hpp
locale-resources/translations/: locale-resources_en.ts  locale-resources_ja.ts  locale-resources_ru.ts
schema-serial/: CMakeLists.txt
schema-serial/src/: main.cpp  widget.fbs
select/: CMakeLists.txt
select/src/: async_file_descriptor.hpp  composite_async_ops.hpp  defer_reactor_adapter.hpp  main.cpp  reactor.hpp  select_reactor.cpp  select_reactor.hpp  task.hpp  tcp_listener.cpp  tcp_listener.hpp  thread_pool.cpp  thread_pool.hpp
thread-pool/: CMakeLists.txt
thread-pool/src/: main.cpp
treeview/: CMakeLists.txt
treeview/src/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui  notes.cpp  notes.hpp  notesmodel.cpp  notesmodel.hpp
utils/: CMakeLists.txt  ce-utils-config.cmake.in
utils/include/ce/: aligned_allocator.hpp  asio_ns.hpp  charconv.hpp  errno.hpp  executor_wrapper.hpp  file_descriptor.hpp  format.hpp  generator.hpp  hex.hpp  io_context_signal_interrupter.hpp  pipe.hpp  random.hpp  socket_session.hpp  spawn.hpp  stdcoro.hpp  tcp_listener.hpp
utils/src/: file_descriptor.cpp  hex.cpp  random.cpp  socket_session.cpp  tcp_listener.cpp
